<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <POU Name="MAIN" Id="{1515f92f-5de5-44c8-8eb7-b2c6bf787c06}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	in_speedstep: INT:= 1;
	in_speed: INT:= 5;
	in_maxcount: INT:= 100;
	in_increment: INT:= 1;	
	incerement: INT:= 1;
	b_IncrementNow: BOOL;
	//-----------------------------------
	b_Controll: BOOL:= FALSE;
	b_ModeSelect: BOOL:= FALSE;
	b_ConfirmNotifi: BOOL:= FALSE;
	b_LightGrid: BOOL:= TRUE;
	b_EmSwitch: BOOL:= TRUE;
	b_ScrewDoor: BOOL:= TRUE;
	i_OverAllSpeed: REAL:= 76.86;
	//----------------------------------
	i_DepragStatus: INT:= 1;
	i_DepragStep: INT:= 2;
	r_DepragTorque: REAL:= 0.86;
	i_DepragAngle: INT:= 56;
	i_DepragProgramNR: INT:= 28;
	r_DepragCycleTime: REAL:= 1.3;
	i_ErrorMessage: INT:= 0;
	//-----------------------------------
	t_temp: INT:= 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF HMI_Variable.b_ConfirmNotifi  THEN
	HMI_Variable.b_ClearNotifi := TRUE;
	HMI_Variable.i_ErrorMessage:= 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="182" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="217" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>